--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-            <li><a href="#">Shop</a></li>
+            <li><a href="index.html">Shop</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">Cart</a></li>
+            <li><a href="cart.html">Cart</a></li>
             <li><a href="#">Add Product</a></li>
             <li><a href="#">Admin Products</a></li>
         </ul>
